# Cpp-Secure-TCP-Chat

./: .gitignore  CMakeLists.txt  README.md
headers/: cryptoutils.h  error.h
src/: CryptoUtils.cpp  TestCrypto.cpp  client.cpp  server.cpp
